@@ -219,13 +219,13 @@ ALTER TABLE webcal_entry_repeats ADD cal_byweekno VARCHAR(50) DEFAULT NULL;
 ALTER TABLE webcal_entry_repeats ADD cal_byyearday VARCHAR(50) DEFAULT NULL;
 ALTER TABLE webcal_entry_repeats ADD cal_count INT DEFAULT NULL;
 ALTER TABLE webcal_entry_repeats ADD cal_wkst CHAR(2) DEFAULT 'MO';
-ALTER TABLE webcal_entry_repeats_not ADD cal_exdate int(1);
+ALTER TABLE webcal_entry_repeats_not ADD cal_exdate int;
 UPDATE webcal_entry_repeats_not SET cal_exdate = '1';
 ALTER TABLE webcal_entry_repeats_not ALTER cal_exdate SET DEFAULT '1';
 ALTER TABLE webcal_entry_repeats_not ALTER cal_exdate SET NOT NULL;
-ALTER TABLE webcal_entry_user ADD cal_percent int(11);
+ALTER TABLE webcal_entry_user ADD cal_percent int;
 UPDATE webcal_entry_user SET cal_percent = '0';
-ALTER TABLE webcal_entry_user ALTER cal_percent SET DEFALT '0';
+ALTER TABLE webcal_entry_user ALTER cal_percent SET DEFAULT '0';
 ALTER TABLE webcal_entry_user ALTER cal_percent SET NOT NULL;
 ALTER TABLE webcal_site_extras DROP CONSTRAINT webcal_site_extras_pkey;
 
@@ -290,7 +290,7 @@ ALTER TABLE webcal_user ADD cal_address VARCHAR(75) DEFAULT NULL;
 ALTER TABLE webcal_user ADD cal_birthday INT NULL;
 ALTER TABLE webcal_user ADD cal_enabled CHAR(1);
 UPDATE TABLE webcal_user SET cal_enabled = 'Y';
-ALTER TABLE webcal_user ALTER cal_enabled DEFAULT 'Y';
+ALTER TABLE webcal_user ALTER cal_enabled SET DEFAULT 'Y';
 ALTER TABLE webcal_user ALTER cal_enabled SET NOT NULL;
 ALTER TABLE webcal_user ADD cal_last_login INT NULL;
 ALTER TABLE webcal_user ADD cal_telephone VARCHAR(50) DEFAULT NULL;
